node-app-k8s-manifest-dev/node-app-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: node-app-dev
  labels:
    name: node-app-dev
