node-app-k8s-manifest-dev/node-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: node-app-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-swagger-metrics # name must be under the container
          image: mzm1/node-swagger-metrics:7c27188abe71e6a8073e8763476b21dd66cf3f3e
          imagePullPolicy: Always # also nested here
          ports:
            - containerPort: 3000 # optional, but recommended
