node-app-k8s-manifest-dev/node-app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: node-app-dev
spec:
  ports:
  - name: node
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-app
  type: ClusterIP
