node-app-k8s-manifest-dev/ingress-node-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress-app
  namespace: name-app-dev
spec:
  ingressClassName: nginx
  rules:
  - host: node.local
    http:
      paths:
      - backend:
          service:
            name: node-app
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.39.16
